k3s/overlays/prod/config/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: prod-gateway
  namespace: prod
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  gatewayClassName: traefik
  listeners:
    - name: websecure
      hostname: "*.pve.zagoapps.com"
      port: 8443
      protocol: HTTPS
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              gateway-access/public: "true"
      tls:
        mode: Terminate
        certificateRefs:
          - name: zagoapps-com-tls
    - name: websecure-apex
      hostname: "pve.zagoapps.com"
      port: 8443
      protocol: HTTPS
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              gateway-access/public: "true"
      tls:
        mode: Terminate
        certificateRefs:
          - name: zagoapps-com-apex-tls
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: internal-gateway
  namespace: internal-gateway
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  gatewayClassName: traefik
  listeners:
    - name: websecure-int
      hostname: "*.int.pve.zagoapps.com"
      port: 9443 # must match the Traefik entrypoint port
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - name: int-zagoapps-com-tls
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              gateway-access/internal: "true"
